# jarvis-desktop

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release-desktop.yml
src/: App.css  App.tsx  api.ts  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: ChatsPanel.tsx  ChecklistPanel.tsx  DevProgressPanel.tsx  NotificationPanel.tsx  ReposPanel.tsx  RequirementsPanel.tsx  SpaceTabView.tsx  SyncPanel.tsx  TopBar.tsx  UserAvatarMenu.tsx
src/pages/: Dashboard.tsx  FileExplorer.tsx  Login.tsx  SpaceList.tsx
