[package]
name = "desktop"
version = "0.1.0"
description = "Jarvis Space Desktop Client"
authors = ["Jarvis Team"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
notify = { version = "6", features = ["macos_fsevent"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
tauri-plugin-http = "2.5.7"
tauri-plugin-dialog = "2.6.0"
